--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
     <link rel="stylesheet" href="pages/index.css">
 </head>
@@ -105,7 +106,7 @@
             <div class="place">
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
                 <div class="place__image">
@@ -127,7 +128,7 @@
             <div class="place">
                 <h2 class="place__title">Кольский</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                        target="_blank">National Geographic</a>
                 </div>
@@ -152,7 +153,7 @@
             <div class="place">
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
                        target="_blank">Facebook</a>
                 </div>
@@ -177,7 +178,7 @@
             <div class="place">
                 <h2 class="place__title">Зимний Байкал</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a class="place__link" href="https://vk.com/baikalmile"
                        target="_blank">https://vk.com/baikalmile</a>
                 </div>
@@ -198,7 +199,7 @@
             <div class="place">
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                 </div>
                 <div class="place__image">
@@ -225,9 +226,12 @@
                     <img src="https://static.mk.ru/upload/entities/2022/05/27/08/articles/facebookPicture/7d/88/79/6d/3039b69c192b2dac56a02b36815df8e3.jpg"
                          alt="Фото железнодорожной станции">
                 </div>
-                <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-                <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-                    электричках.</h3>
+                <nav>
+                    <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+                        на
+                        электричках.</p>
+                </nav>
             </a>
         </section>
     </main>
