fixed mistakes after review

--- a/index.html
+++ b/index.html
@@ -65,42 +65,18 @@
             </ul>
         </section>
         <section class="photo-grid">
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-train.jpg" alt="Вид на море из окна поезда">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-atharva-tulsi.jpg" alt="Заснеженные горы с облаками">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-tuman.jpg" alt="Туман над полем со стогами сена">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-sochi.jpg" alt="Горный лес в тумане">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-arisa.jpg" alt="Колесо уазика на льду">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-baikal.jpg" alt="Пляж на побережье байкала">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-elbrus.jpg" alt="Вершина эльбруса">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-kondratiev.jpg" alt="Знак пешеходного перехода">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-kamchatka-1.jpg" alt="Горы камчатки с воздуха">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-kamchatka-2.jpg" alt="Горы камчатки с земли">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-baikal-2.jpg" alt="Горы байкала на побережье">
-            </div>
-            <div class="photo-grid__item">
-                <img src="images/photo-grid-ergaki.jpg" alt="Горы покрытые мхом в тумане">
-            </div>
+            <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Вид на море из окна поезда">
+            <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Заснеженные горы с облаками">
+            <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Туман над полем со стогами сена">
+            <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="Горный лес в тумане">
+            <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="Колесо уазика на льду">
+            <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="Пляж на побережье байкала">
+            <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="Вершина эльбруса">
+            <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="Знак пешеходного перехода">
+            <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="Горы камчатки с воздуха">
+            <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Горы камчатки с земли">
+            <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Горы байкала на побережье">
+            <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Горы покрытые мхом в тумане">
         </section>
         <section class="places">
             <div class="place">
@@ -109,9 +85,7 @@
                     <p class="place__url-heading">url</p>
                     <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
-                <div class="place__image">
-                    <img src="images/place-kosa.jpg" alt="Море с причудливыми камнями и голубое небо">
-                </div>
+                <img class="place__image" src="images/place-kosa.jpg" alt="Море с причудливыми камнями и голубое небо">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                         горизонта
@@ -132,9 +106,7 @@
                     <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                        target="_blank">National Geographic</a>
                 </div>
-                <div class="place__image">
-                    <img src="images/place-kolsky.jpg" alt="Заснеженные горы кольского полуострова">
-                </div>
+                <img class="place__image" src="images/place-kolsky.jpg" alt="Заснеженные горы кольского полуострова">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
                         которой
@@ -157,9 +129,7 @@
                     <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
                        target="_blank">Facebook</a>
                 </div>
-                <div class="place__image">
-                    <img src="images/place-altai.jpg" alt="Фотография зеленого леса Алтая">
-                </div>
+                <img class="place__image" src="images/place-altai.jpg" alt="Фотография зеленого леса Алтая">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России.
                         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
@@ -182,9 +152,7 @@
                     <a class="place__link" href="https://vk.com/baikalmile"
                        target="_blank">https://vk.com/baikalmile</a>
                 </div>
-                <div class="place__image">
-                    <img src="images/place-winter-baikal.jpg" alt="Фото прозрачного льда байкала">
-                </div>
+                <img class="place__image" src="images/place-winter-baikal.jpg" alt="Фото прозрачного льда байкала">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
                         в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
@@ -202,9 +170,7 @@
                     <p class="place__url-heading">url</p>
                     <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                 </div>
-                <div class="place__image">
-                    <img src="images/place-karelia.jpg" alt="Фотография карельских лесов возле реки">
-                </div>
+                <img class="place__image" src="images/place-karelia.jpg" alt="Фотография карельских лесов возле реки">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                         сибирская
@@ -222,10 +188,6 @@
         </section>
         <section class="cover">
             <a class="cover__wrapper" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-                <div class="cover__background">
-                    <img src="https://static.mk.ru/upload/entities/2022/05/27/08/articles/facebookPicture/7d/88/79/6d/3039b69c192b2dac56a02b36815df8e3.jpg"
-                         alt="Фото железнодорожной станции">
-                </div>
                 <nav>
                     <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
