--- a/index.html
+++ b/index.html
@@ -188,17 +188,15 @@
         </section>
         <section class="cover">
             <a class="cover__wrapper" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-                <nav>
-                    <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
-                        на
-                        электричках.</p>
-                </nav>
+                <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+                    на
+                    электричках.</p>
             </a>
         </section>
     </main>
     <footer class="footer">
-        <ul class="footer__links">
+        <nav class="footer__links">
             <li class="footer__links-item"><a class="footer__link" href="https://yandex.ru/maps"
                                               target="_blank">Карты</a></li>
             <li class="footer__links-item"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
@@ -209,7 +207,7 @@
             </li>
             <li class="footer__links-item"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
             </li>
-        </ul>
+        </nav>
         <p class="footer__copyright">&copy;2022 Арсений Швецов</p>
     </footer>
 </div>
