fix bugs after review

--- a/index.html
+++ b/index.html
@@ -196,17 +196,20 @@
         </section>
     </main>
     <footer class="footer">
-        <nav class="footer__links">
-            <li class="footer__links-item"><a class="footer__link" href="https://yandex.ru/maps"
-                                              target="_blank">Карты</a></li>
-            <li class="footer__links-item"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-            </li>
-            <li class="footer__links-item"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
-            </li>
-            <li class="footer__links-item"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
-            </li>
-            <li class="footer__links-item"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
-            </li>
+        <nav>
+            <ul class="footer__links">
+                <li class="footer__links-item"><a class="footer__link" href="https://yandex.ru/maps"
+                                                  target="_blank">Карты</a></li>
+                <li class="footer__links-item"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+                </li>
+                <li class="footer__links-item"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+                </li>
+                <li class="footer__links-item"><a class="footer__link" href="https://calendar.yandex.ru"
+                                                  target="_blank">Календарь</a>
+                </li>
+                <li class="footer__links-item"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+                </li>
+            </ul>
         </nav>
         <p class="footer__copyright">&copy;2022 Арсений Швецов</p>
     </footer>
