--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
-            <h2 class="intro__title">Чего мы там не видели?</h2>
-            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+            <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
+            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только 36%
+                планируют
                 провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
                 вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
                 эти
-                красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+                красоты можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
                 Башмакова
-                — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-                километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
+                — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и&nbsp;проехала 20
+                тысяч
+                километров по родной стране. Мы выбрали и&nbsp;описали некоторые интересные места, достойные вашего
                 отпуска.</p>
             <ul class="intro__list">
                 <li>
@@ -91,12 +93,12 @@
                         горизонта
                         — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
                         другой.
-                        Уникальная природная зона на краю российского анклава.</p>
-                    <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника
-                        и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
-                        наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
-                        спокойствие природы
-                        и запах стального, прохладного моря.</p>
+                        Уникальная природная зона на&nbsp;краю российского анклава.</p>
+                    <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника
+                        и&nbsp;исследователя там же по&nbsp;соседству — самая западная точка России, Балтийская коса, —
+                        и&nbsp;немецкое
+                        наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
+                        природы и запах стального, прохладного моря.</p>
                 </div>
             </div>
             <div class="place">
@@ -111,7 +113,7 @@
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
                         которой
                         на юг —
-                        тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                        тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                     <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
                         фестиваля в
                         Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках
@@ -135,14 +137,14 @@
                         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
                         горные
                         реки и
-                        озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних
+                        озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом
+                        здешних
                         мест —
                         горным воздухом.</p>
                     <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
                         увидите
-                        всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а
-                        на
-                        равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+                        всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на
+                        равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского края.</p>
                 </div>
             </div>
             <div class="place">
@@ -155,12 +157,12 @@
                 <img class="place__image" src="images/place-winter-baikal.jpg" alt="Фото прозрачного льда байкала">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-                        в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
-                        мест в
-                        России.</p>
-                    <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
-                        скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-                        к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
+                        в мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из
+                        красивейших
+                        мест в&nbsp;России.</p>
+                    <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+                        скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем
+                        старается развить как можно бóльшую скорость на льду. В марте 2019 года на
                         фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
             </div>
@@ -178,8 +180,8 @@
                         карельских
                         национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже
                         больше
-                        чем
-                        полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван
+                        чем&nbsp;полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его
+                        Иван
                         Грозный.
                         В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
@@ -189,7 +191,8 @@
         <section class="cover">
             <a class="cover__wrapper" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
                 <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+                <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp;— путешествие от&nbsp;столицы&nbsp;до
+                    Байкала
                     на
                     электричках.</p>
             </a>
